<resources>
    <string name="app_name">Pet Care</string>
    <string name="sign_in">Sign In</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">Next</string>
    <string name="getStarted">Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="s1">Welcome to Pet Care</string>
    <string name="s2">Proven experts</string>
    <string name="s3">Reliable reviews</string>
    <string name="s11">All types of services for your pet in one \n place, instantly searchable.</string>
    <string name="s22">We interview every specialist before
they get to work.</string>
    <string name="s33">A review can be left only by a user \n
who used the service.</string>
    <string name="welcome">Welcome</string>
    <string name="to">to</string>
    <string name="pet_care">Pet Care</string>
    <string name="continue_with">Continue with </string>
    <string name="fb">Facebook</string>
    <string name="google">Google</string>
    <string name="registration">Registration</string>
    <string name="register_with_gmail">Register with Email</string>
    <string name="login_descreption">Already have an account?</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="do_not_remember">Do not remember the password?</string>
    <string name="password">Password</string>
    <string name="or_continue_with">or continue with</string>
    <string name="i_agree_with">I agree with </string>
    <string name="i_do_not_want">I do not want to receive newsletter</string>
    <string name="do_you_have">Don\'t have account yet?</string>
    <string name="the_rules"><u>the rules</u></string>
    <string name="what_are_you">What are you</string>
    <string name="looking_for">looking for,</string>
    <string name="maria">Maria?</string>
    <string name="home">Home</string>
    <string name="appointments">Appointments</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="troy">Troy</string>
    <string name="dog">Dog</string>
    <string name="male">Male</string>
    <string name="size">80inch</string>
    <string name="neutered">Neutered</string>
    <string name="Vaccinated">Vaccinated</string>
    <string name="Friendly_with_cats">Friendly with cats</string>
    <string name="Friendly_with_dogs">Friendly with dogs</string>
    <string name="german_shepherd">German Shepherd</string>
    <string name="Delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Personality">Personality</string>
    <string name="Introduction">Introduction</string>
    <string name="Intelligence">Intelligence</string>
    <string name="rate">4.9</string>
    <string name="review">125 reviews</string>
    <string name="Submit">Submit</string>
    <string name="friendly_with_kids_lt_10">Friendly with kids &lt; 10 year</string>
    <string name="friendly_with_kids_gt_10">Friendly with kids &gt; 10 year</string>
    <string name="Additional_Information">Additional Information</string>
    <string name="female">Female</string>
    <string name="Gender">Gender</string>
    <string name="Size_optional">Size (optional)</string>
    <string name="Breed">Breed</string>
    <string name="species_of_your_pet">Species of your pet </string>
    <string name="pet_name">Pet’s name</string>
    <string name="general_info">General information</string>
    <string name="add_pet_details">Add pet detail</string>
    <string name="update_pet_details">Update pet detail</string>
    <string name="update">Update</string>
    <string name="are_you_sure_want_to">Are you sure you want to delete this pet \ndetails?</string>
    <string name="intro_des">I\'m 17 month old German Shepherd called Troy, Snaffs (or Snafu when naughty). Apparently i\'m characterised as "special needs" because I\'m a tripaw. Pff, no special needs here except I\'m the doggy equivalent of a teenager.</string>
    <string name="personality_des">This should be the biggest section, and cover personality features, adorable things they do, energy level, if they are affectionate (and if so, in what ways), things they love to do, any training they have, favorite pastimes, any funny things they do, etc.). When we write our bios, this section is usually 3-6 paragraphs long! The more specific info you give, the more people will get a feel for your dog and the better response you will get.
</string>

    <string name="intelligence_des">German Shepherds were bred specifically for their intelligence.In a list of breeds most likely to bark as watchdogs, Stanley Coren ranked the breed in second place.Coupled with their strength, this trait makes the breed desirable as police, guard and search and rescue dogs, as they are able to quickly learn various tasks and interpret instructions better than other breeds.
</string>
    <string name="Update">Update</string>
    <string name="Logout">logout</string>

    <string name="facebook_app_id">759667162416301</string>
    <string name="fb_login_protocol_scheme">fb759667162416301</string>
    <string name="facebook_client_token">27e6ac8f499be3a9fddc688ceed51b16</string>

</resources>