<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/delete_dialog_bg"
    android:elevation="@dimen/_10sdp">

    <LinearLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/close_btn"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_icon"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_weight="8"
            android:paddingEnd="@dimen/_25sdp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_24sdp"
            android:text="@string/Delete"
            android:textColor="#070821"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/encode_sans_bold"/>

    </LinearLayout>


    <TextView
        android:id="@+id/text_warning"
        android:layout_below="@+id/r1"
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/encode_sans"
        android:textColor="#070821"
        android:text="@string/are_you_sure_want_to"
        />

    <LinearLayout
        android:layout_below="@+id/text_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_34sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        >

        <Button
            android:id="@+id/delete_yes"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/yes_no_btn_selector"
            android:text="@string/yes"
            android:textColor="#070821"
            android:fontFamily="@font/encode_sans_bold"
            />

        <Button
            android:id="@+id/delete_no"
            android:background="@drawable/yes_no_btn_selector"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_38sdp"
            android:text="@string/no"
            android:textColor="#070821"
            android:fontFamily="@font/encode_sans_bold"
            />


    </LinearLayout>

</RelativeLayout>