<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_270sdp"
        android:background="@drawable/header_bg"
        >
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/arrow_left"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_16sdp"
            />

        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:layout_below="@+id/back_button"
            android:textSize="@dimen/_30sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/encode_sans_semibold"
            android:layout_marginStart="@dimen/_40sdp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        >

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_height="@dimen/_390sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_140sdp"
        style="@style/registration_card"
        android:outlineAmbientShadowColor="@color/black"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/f_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:text="@string/full_name"
                android:textColor="@color/text_gray"
                android:fontFamily="@font/encode_sans"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_27sdp"
                />
            <EditText
                android:id="@+id/fullName"
                android:layout_below="@id/f_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:backgroundTint="#F0F0F8"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/maill"
                android:layout_below="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:text="@string/email"
                android:textColor="@color/text_gray"
                android:fontFamily="@font/encode_sans"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_5sdp"
                />
            <EditText
                android:id="@+id/email_id"
                android:layout_below="@id/maill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:backgroundTint="#F0F0F8"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/m_no"
                android:layout_below="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:text="@string/mobile"
                android:textColor="@color/text_gray"
                android:fontFamily="@font/encode_sans"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_5sdp"
                />
            <EditText
                android:id="@+id/mobile_no"
                android:layout_below="@id/m_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:backgroundTint="#F0F0F8"
                android:inputType="number"
                android:textColor="@color/black"/>

            <LinearLayout
                android:id="@+id/pass"
                android:layout_below="@id/mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/password"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:id="@+id/pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:text="@string/password"
                    android:textColor="@color/text_gray"
                    android:fontFamily="@font/encode_sans"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_10sdp"
                    />
                <EditText
                    android:id="@+id/password"
                    android:layout_below="@id/m_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:backgroundTint="#F0F0F8"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <CheckBox
                android:id="@+id/check1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pass"
                android:text="@string/i_agree_with"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/black"
                android:paddingStart="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                tools:ignore="RtlSymmetry" />

            <CheckBox
                android:id="@+id/check2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/check1"
                android:text="@string/i_agree_with"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/black"
                android:paddingStart="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"

                tools:ignore="RtlSymmetry" />

            <Button
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_below="@+id/check2"
                android:id="@+id/register_with_mail"
                style="@style/btn"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/sign_up"

                />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>